--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DepositFirst Booking</title>
+    <title>Blytz.Cloud</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
